name:                lol-tests
-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.1
synopsis:            A library for testing <https://hackage.haskell.org/package/lol Λ ∘ λ>.
homepage:            https://github.com/cpeikert/Lol
Bug-Reports:         https://github.com/cpeikert/Lol/issues
license:             GPL-2
license-file:        LICENSE
author:              Eric Crockett <ecrockett0@gmail.com>, Chris Peikert <cpeikert@alum.mit.edu>
maintainer:          Eric Crockett <ecrockett0@gmail.com>
copyright:           Eric Crockett, Chris Peikert
category:            Crypto
stability:           experimental
build-type:          Simple
extra-source-files:  README, CHANGES.md
cabal-version:       >= 1.10
description:
    This library contains code to test <https://hackage.haskell.org/package/lol Λ ∘ λ (Lol)>.
    It is designed so that third-party tensors can be easily tested using the same framework.
    For examples of how to use this library, see the tests for
    <https://hackage.haskell.org/package/lol-cpp lol-cpp>.
source-repository head
  type: git
  location: https://github.com/cpeikert/Lol

library
  default-language: Haskell2010
  ghc-options: -fwarn-dodgy-imports -O2

  exposed-modules:
    Crypto.Lol.Tests
    Crypto.Lol.Tests.CycTests
    Crypto.Lol.Tests.Standard
    Crypto.Lol.Tests.TensorTests
    Crypto.Lol.Tests.ZqTests

  build-depends:
    base,
    lol,
    MonadRandom,
    test-framework,
    test-framework-quickcheck2

-- EAC: This really belongs in lol.cabal, but due to a cabal/stack bug, it can't right now.
test-suite test-lol
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  main-is:            Main.hs
  hs-source-dirs:     exec
  ghc-options: -threaded -O2

  build-depends:
    base,
    lol,
    lol-tests,
    test-framework