name:                lol
-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.7.0.0
synopsis:            A library for lattice cryptography.
homepage:            https://github.com/cpeikert/Lol
Bug-Reports:         https://github.com/cpeikert/Lol/issues
license:             GPL-3
license-file:        LICENSE
author:              Eric Crockett <ecrockett0@gmail.com>, Chris Peikert <cpeikert@alum.mit.edu>
maintainer:          Eric Crockett <ecrockett0@gmail.com>
copyright:           Eric Crockett, Chris Peikert
category:            Crypto
stability:           experimental
build-type:          Simple
extra-source-files:  README, CHANGES.md, Lol.proto, RLWE.proto
cabal-version:       >= 1.10
description:
    Λ ⚬ λ (Lol) is a general-purpose library for ring-based lattice cryptography.
    For a detailed description of interfaces and functionality, see
    <https://eprint.iacr.org/2015/1134 Λ ⚬ λ: Functional Lattice Cryptography>.
    Backends for the library include <https://hackage.haskell.org/package/lol-cpp lol-cpp>
    and <https://hackage.haskell.org/package/lol-repa lol-repa>.
    For example cryptographic applications, see <https://hackage.haskell.org/package/lol-apps lol-apps>.

source-repository head
  type: git
  location: https://github.com/cpeikert/Lol

-- For information on compiling C with cabal: http://blog.ezyang.com/2010/06/setting-up-cabal-the-ffi-and-c2hs/

Flag llvm
  Description:  Compile via LLVM. This produces much better object code,
                but you need to have the LLVM compiler installed.
  -- If you enable this and get errors like "Error: can't resolve
  -- `.rodata' {.rodata section}" then GHC doesn't like your version
  -- of LLVM!
  Default:      False

Flag opt
  Description: Turn on library optimizations
  Default:     True

library
  default-language:   Haskell2010

  if flag(llvm)
    ghc-options: -fllvm -optlo-O3

  exposed-modules:
    Crypto.Lol
    Crypto.Lol.Types
    Crypto.Lol.Factored
    Crypto.Lol.Reflects
    Crypto.Lol.CRTrans
    Crypto.Lol.Gadget
    Crypto.Lol.Prelude

    Crypto.Lol.Cyclotomic.Cyc
    Crypto.Lol.Cyclotomic.CycRep
    Crypto.Lol.Cyclotomic.Language
    Crypto.Lol.Cyclotomic.Linear

    Crypto.Lol.RLWE.Continuous
    Crypto.Lol.RLWE.Discrete
    Crypto.Lol.RLWE.RLWR

    Crypto.Lol.Cyclotomic.Tensor
    Crypto.Lol.GaussRandom
    Crypto.Lol.Types.Unsafe.Complex
    Crypto.Lol.Types.FiniteField
    Crypto.Lol.Types.IrreducibleChar2
    Crypto.Lol.Types.IFunctor
    Crypto.Lol.Types.IZipVector
    Crypto.Lol.Types.Proto
    Crypto.Lol.Types.Random
    Crypto.Lol.Types.Unsafe.RRq
    Crypto.Lol.Types.ZmStar
    Crypto.Lol.Types.Unsafe.ZqBasic

    Crypto.Proto.Lol
    Crypto.Proto.Lol.LinearRq
    Crypto.Proto.Lol.R
    Crypto.Proto.Lol.Rq
    Crypto.Proto.Lol.RqProduct
    Crypto.Proto.Lol.K
    Crypto.Proto.Lol.Kq
    Crypto.Proto.Lol.KqProduct
    Crypto.Proto.Lol.TypeRep
    Crypto.Proto.RLWE
    Crypto.Proto.RLWE.SampleContProduct
    Crypto.Proto.RLWE.SampleDiscProduct
    Crypto.Proto.RLWE.SampleRLWRProduct
    Crypto.Proto.RLWE.SampleCont
    Crypto.Proto.RLWE.SampleDisc
    Crypto.Proto.RLWE.SampleRLWR

    Crypto.Lol.Utils.ShowType

    Crypto.Lol.Tests
    Crypto.Lol.Benchmarks

  other-modules:
    Crypto.Lol.Cyclotomic.CRTSentinel
    Crypto.Lol.FactoredDefs
    Crypto.Lol.Types.Numeric
    Crypto.Lol.PosBin
    Crypto.Lol.PosBinDefs

    Crypto.Lol.Utils.Tests
    Crypto.Lol.Utils.Benchmarks
    Crypto.Lol.Utils.PrettyPrint
    Crypto.Lol.Utils.PrettyPrint.Diagnostic
    Crypto.Lol.Utils.PrettyPrint.Table

    Crypto.Lol.Tests.CycTests
    Crypto.Lol.Tests.Default
    Crypto.Lol.Tests.TensorTests
    Crypto.Lol.Tests.ZqTests

    Crypto.Lol.Benchmarks.CycBenches
    Crypto.Lol.Benchmarks.Default
    Crypto.Lol.Benchmarks.TensorBenches
    Crypto.Lol.Benchmarks.CycRepBenches

  build-depends:
    ansi-terminal,
    arithmoi,
    base,
    bytestring,
    constraints,
    containers,
    criterion,
    crypto-api,
    data-default,
    deepseq,
    directory,
    monadcryptorandom,
    MonadRandom,
    mtl,
    numeric-prelude,
    protocol-buffers,
    protocol-buffers-descriptor,
    random,
    reflection,
    singletons,
    statistics,
    tagged-transformer,
    template-haskell,
    test-framework,
    test-framework-quickcheck2,
    vector,
    vector-th-unbox,
    QuickCheck

test-suite test-lol
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  main-is:            LolTestsMain.hs
  ghc-options:        -main-is LolTestsMain
  hs-source-dirs:     tests

  build-depends:
    base,
    lol,
    test-framework
