name:                rlwe-challenges
-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.1
synopsis:            Ring-LWE/LWR challenges using Lol.
homepage:            https://github.com/cpeikert/Lol
Bug-Reports:         https://github.com/cpeikert/Lol/issues
license:             GPL-3
license-file:        LICENSE
author:              Eric Crockett <ecrockett0@gmail.com>, Chris Peikert <cpeikert@alum.mit.edu>
maintainer:          Eric Crockett <ecrockett0@gmail.com>
copyright:           Eric Crockett, Chris Peikert
category:            Crypto
stability:           experimental
build-type:          Simple
extra-source-files:  README, CHANGES.md, Challenges.proto
cabal-version:       >= 1.10
description:
    Contains a library for reading serialized challenges
    (generated with <https://hackage.haskell.org/package/hprotoc hprotoc>)
    and an executable used to generate, suppress, and verify RLWE and RLWR
    challenges using <https://hackage.haskell.org/package/lol Λ ∘ λ>  (Lol).
    You can find more information about the challenges
    <https://web.eecs.umich.edu/~cpeikert/rlwe-challenges here>.

source-repository head
  type: git
  location: https://github.com/cpeikert/Lol

library
  default-language: Haskell2010
  ghc-options: -O2 -Wall

  exposed-modules:
    Crypto.Proto.RLWE.Challenges
    Crypto.Proto.RLWE.Challenges.Challenge
    Crypto.Proto.RLWE.Challenges.Challenge.Params
    Crypto.Proto.RLWE.Challenges.ContParams
    Crypto.Proto.RLWE.Challenges.DiscParams
    Crypto.Proto.RLWE.Challenges.RLWRParams
    Crypto.Proto.RLWE.Challenges.InstanceContProduct
    Crypto.Proto.RLWE.Challenges.InstanceDiscProduct
    Crypto.Proto.RLWE.Challenges.InstanceRLWRProduct
    Crypto.Proto.RLWE.Challenges.SecretProduct
    Crypto.Proto.RLWE.Challenges.InstanceCont
    Crypto.Proto.RLWE.Challenges.InstanceDisc
    Crypto.Proto.RLWE.Challenges.InstanceRLWR
    Crypto.Proto.RLWE.Challenges.Secret

    Crypto.RLWE.Challenges.Beacon
    Crypto.RLWE.Challenges.Common
    Crypto.RLWE.Challenges.Generate
    Crypto.RLWE.Challenges.Params
    Crypto.RLWE.Challenges.Suppress
    Crypto.RLWE.Challenges.Verify

  build-depends:
    ansi-terminal < 0.7,
    base >= 4.9 && < 5,
    bytestring < 0.11,
    containers < 0.6,
    constraints < 0.10,
    directory < 1.4,
    DRBG < 0.6,
    filepath < 1.5,
    http-client >= 0.5 && < 0.6,
    http-conduit < 2.3,
    lol >= 0.6.0.0 && < 0.8,
    MonadRandom < 0.6,
    mtl < 2.3,
    nist-beacon < 0.3,
    parsec < 3.2,
    protocol-buffers < 2.5,
    protocol-buffers-descriptor < 2.5,
    reflection < 2.2,
    tagged < 0.9,
    tagged-transformer < 0.9,
    time < 1.9

executable rlwe-challenges
  default-language: Haskell2010
  hs-source-dirs:   exec
  main-is:          RLWEChallengesMain.hs
  ghc-options:      -main-is RLWEChallengesMain

  ghc-options: -threaded -rtsopts -O2 -fno-warn-partial-type-signatures

  build-depends:
    ansi-terminal < 0.7,
    base >= 4.9 && < 5,
    constraints < 0.10,
    lol-cpp < 0.1,
    options < 1.3,
    rlwe-challenges,
    tagged-transformer < 0.9,
    time < 1.9
